Add script APIs, server ping and task view features
Expose script CRUD and task inspection endpoints and add server ping capability. Added ScriptService interface and ScriptServiceImpl plus ScriptController for creating, listing, retrieving and deleting scripts. Extended TaskService and TaskServiceImpl with getTaskById/getAllTasks and added corresponding TaskController endpoints. Introduced ping/checkConnection: ScriptExecutor gained ping(), implemented in MockScriptExecutor and SshScriptExecutor; ServerService now exposes checkConnection() and ServerController provides a /{id}/ping endpoint. Updated ServerProfile to map username/password. Build changes: upgraded Spring Boot to 3.2.2, switched web starter to spring-boot-starter-web, adjusted test deps, and set Gradle wrapper to 8.5. application.properties default executor set to ssh.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8081
 # mock | ssh
-#nto.executor.type=mock
+nto.executor.type=ssh
