--- a/.github/workflows/setup-test-env.yml
+++ b/.github/workflows/setup-test-env.yml
@@ -31,13 +31,13 @@ jobs:
             START_PORT=${{ inputs.start_port }}
             WORK_DIR="~/nto_test_infra"
             IMAGE_NAME="nto-ssh-node"
-
+            
             echo "🚀 Начало развертывания $NODE_COUNT нод..."
-
+            
             # 1. Подготовка рабочей директории
             mkdir -p $WORK_DIR
             cd $WORK_DIR
-
+            
             # 2. Создание Dockerfile на лету (Alpine + SSH)
             cat <<EOF > Dockerfile
             FROM alpine:latest
@@ -50,34 +50,33 @@ jobs:
             EXPOSE 22
             CMD ["/usr/sbin/sshd", "-D"]
             EOF
-
+            
             # 3. Очистка старых контейнеров (Idempotency)
             echo "🧹 Очистка старых контейнеров..."
-            # Останавливаем и удаляем все контейнеры, использующие этот образ
             docker ps -a --filter "ancestor=$IMAGE_NAME" -q | xargs -r docker rm -f
-
+            
             # 4. Сборка образа
             echo "🔨 Сборка Docker образа..."
             docker build -t $IMAGE_NAME .
-
+            
             # 5. Запуск цикла создания контейнеров
             echo "🔥 Запуск контейнеров..."
             
             for i in $(seq 1 $NODE_COUNT); do
                 # Вычисляем порт: 2220 + 1 = 2221
                 CURRENT_PORT=$((START_PORT + i))
-                CONTAINER_NAME="nto_node_\$i"
+                CONTAINER_NAME="nto_node_$i"
             
-                # Запускаем контейнер
+                # Запускаем контейнер (убраны \$ перед переменными)
                 docker run -d \
                   -p $CURRENT_PORT:22 \
-                  --name \$CONTAINER_NAME \
-                  --hostname "linux-server-\$i" \
+                  --name $CONTAINER_NAME \
+                  --hostname "linux-server-$i" \
                   --restart unless-stopped \
                   $IMAGE_NAME
             
-                echo "✅ Создан \$CONTAINER_NAME на порту $CURRENT_PORT"
+                echo "✅ Создан $CONTAINER_NAME на порту $CURRENT_PORT"
             done
-
+            
             echo "🏁 Готово! Список запущенных нод:"
             docker ps --filter "ancestor=$IMAGE_NAME" --format "table {{.Names}}\t{{.Ports}}\t{{.Status}}"
