--- a/.github/workflows/setup-test-env.yml
+++ b/.github/workflows/setup-test-env.yml
@@ -53,7 +53,7 @@ jobs:
             
             # 3. Очистка старых контейнеров (Idempotency)
             echo "🧹 Очистка старых контейнеров..."
-            # Останавливаем и удаляем контейнеры
+            # Останавливаем и удаляем контейнеры по имени
             for i in $(seq 1 $NODE_COUNT); do
               CONTAINER_NAME="nto_node_$i"
               if docker ps -a --format '{{.Names}}' | grep -q "^$CONTAINER_NAME$"; then
@@ -64,7 +64,7 @@ jobs:
             
             # 4. Сборка образа (только если не существует)
             echo "🔨 Сборка Docker образа..."
-            if ! docker images | grep -q "$IMAGE_NAME"; then
+            if ! docker images -q $IMAGE_NAME > /dev/null 2>&1; then
               docker build -t $IMAGE_NAME .
             else
               echo "Образ $IMAGE_NAME уже существует, пропускаем сборку"
@@ -84,7 +84,7 @@ jobs:
                 continue
               fi
             
-              # Запускаем контейнер
+              # Запускаем контейнер (ВАЖНО: без экранирования $)
               docker run -d \
                 -p $CURRENT_PORT:22 \
                 --name $CONTAINER_NAME \
