--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ sonar {
         property "sonar.host.url", "https://sonarcloud.io"
         // Указываем Sonar брать отчеты Jacoco (если добавишь покрытие тестами позже) и Checkstyle
         property "sonar.java.checkstyle.reportPaths", "build/reports/checkstyle/main.xml"
+        property "sonar.gradle.skipCompile", "true"
     }
 }
 
