Refactor SSH executor and move DB config to env
Extracts SSH session/setup and output-reading logic into helper methods in SshScriptExecutor (createSshSession, readChannelOutput, readStreamData) to simplify the main execution flow and improve readability. CI/workflow changes: build-and-analyze now exposes DB_* secrets as env vars; deploy-db sets a new DB_PASS value. application.properties replaced hardcoded DB URL/credentials with environment placeholders (DB_HOST, DB_PORT, DB_NAME, DB_USERNAME, DB_PASSWORD) to allow configurable deployments — note: the password property now references DB_USERNAME in this diff (likely should be DB_PASSWORD). .gitignore updated to ignore local config files (.env, application-local.{yml,properties}) and IDE artifacts.

--- a/.github/workflows/deploy-db.yml
+++ b/.github/workflows/deploy-db.yml
@@ -19,7 +19,7 @@ jobs:
             CONTAINER_NAME="nto_db_container"
             DB_NAME="nto_db"
             DB_USER="postgres"
-            DB_PASS="password"
+            DB_PASS="supermegrovibroblastsuperdupersocialist"
             HOST_PORT="5400"
             VOLUME_NAME="nto_pg_data"
 
