--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+application-local.yml
+application-local.properties
+.env
+
 ### STS ###
 .apt_generated
 .classpath
@@ -35,3 +39,5 @@ out/
 
 ### VS Code ###
 .vscode/
+src/main/resources/application-local.properties
+src/main/resources/application-local.properties
