--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://155.212.208.107:5400/nto_db
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:nto_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_USERNAME:password}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
