--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ jobs:
             echo "DB_PORT=$DB_PORT" > .env
             echo "DB_HOST=$DB_HOST" >> .env
             echo "DB_NAME=$DB_NAME" >> .env
+            echo " $DB_NAME "
             echo "DB_PASSWORD=$DB_PASSWORD" >> .env
             echo "DB_USERNAME=$DB_USERNAME" >> .env
             
