--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          script: |
+        script: |
             # Переходим в целевую директорию
             cd ~/nto_app
             
@@ -67,7 +67,7 @@ jobs:
             echo "DB_PORT=$DB_PORT" > .env
             echo "DB_HOST=$DB_HOST" >> .env
             echo "DB_NAME=$DB_NAME" >> .env
-            echo " $DB_NAME "
+            echo $DB_NAME
             echo "DB_PASSWORD=$DB_PASSWORD" >> .env
             echo "DB_USERNAME=$DB_USERNAME" >> .env
             
