--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,13 +5,33 @@ events {
 http {
     server {
         listen 80;
-        server_name _; # Здесь позже укажешь свой домен
+        server_name formatis.online; # ЗАМЕНИ НА СВОЙ ДОМЕН
+
+        # Специальный location для проверки владения доменом от Let's Encrypt
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Все остальные HTTP запросы редиректим на HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name formatis.online; # ЗАМЕНИ НА СВОЙ ДОМЕН
+
+        # Пути к сертификатам (они появятся после работы Certbot)
+        ssl_certificate /etc/letsencrypt/live/api.твой-домен.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.твой-домен.com/privkey.pem;
+
+        # Рекомендуемые настройки безопасности SSL
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            # nto-backend — это имя сервиса в docker-compose
             proxy_pass http://nto-backend:8080;
-
-            # Стандартные заголовки для передачи реального IP и протокола (аналог UseForwardedHeaders в ASP.NET)
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
