--- a/.github/workflows/setup-test-env.yml
+++ b/.github/workflows/setup-test-env.yml
@@ -62,14 +62,10 @@ jobs:
               fi
             done
             
-            # 4. Сборка образа (только если не существует)
+            # 4. Сборка образа 
             echo "🔨 Сборка Docker образа..."
-            if ! docker images -q $IMAGE_NAME > /dev/null 2>&1; then
-              docker build -t $IMAGE_NAME .
-            else
-              echo "Образ $IMAGE_NAME уже существует, пропускаем сборку"
-            fi
-            
+            docker build -t $IMAGE_NAME .
+ 
             # 5. Запуск цикла создания контейнеров  
             echo "🔥 Запуск контейнеров..."
             
