--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,8 +23,8 @@ http {
         server_name formatis.online; # ЗАМЕНИ НА СВОЙ ДОМЕН
 
         # Пути к сертификатам (они появятся после работы Certbot)
-        ssl_certificate /etc/letsencrypt/live/api.твой-домен.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api.твой-домен.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/formatis.online/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/formatis.online/privkey.pem;
 
         # Рекомендуемые настройки безопасности SSL
         ssl_protocols TLSv1.2 TLSv1.3;
