--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8080
 # mock | ssh
-nto.executor.type=ssh
+nto.executor.type=mock
+
+logging.file.name=logs/nto-app.log
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=7
+logging.logback.rollingpolicy.total-size-cap=512MB
