--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8080
 # mock | ssh
-nto.executor.type=mock
+nto.executor.type=ssh
 
 logging.file.name=logs/nto-app.log
 logging.logback.rollingpolicy.max-file-size=10MB
