--- a/.github/workflows/deploy-db.yml
+++ b/.github/workflows/deploy-db.yml
@@ -23,20 +23,17 @@ jobs:
             HOST_PORT="5400"
             VOLUME_NAME="nto_pg_data"
 
-            echo "🚀 Начинаем развертывание PostgreSQL..."
+            echo "Начинаем развертывание PostgreSQL..."
 
-            # 1. Создаем Docker Volume для сохранения данных БД между перезапусками контейнера
             docker volume create $VOLUME_NAME
 
-            # 2. Очистка старого контейнера (если он уже был запущен)
-            echo "🧹 Проверка существующих контейнеров..."
+            echo "Проверка существующих контейнеров..."
             if [ "$(docker ps -aq -f name=$CONTAINER_NAME)" ]; then
                 echo "Остановка и удаление старого контейнера $CONTAINER_NAME..."
                 docker rm -f $CONTAINER_NAME
             fi
 
-            # 3. Запуск нового контейнера с пробросом порта 5400 -> 5432
-            echo "🔥 Запуск PostgreSQL..."
+            echo "Запуск PostgreSQL..."
             docker run -d \
               --name $CONTAINER_NAME \
               -p $HOST_PORT:5432 \
