--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,12 @@ out/
 /nbdist/
 /.nb-gradle/
 
+## TESTS ##
+src/test/resources/application-test.properties
+src/test/java/nto/demonstrations/*
+build/reports/tests/
+build/test-results/
+
 ### VS Code ###
 .vscode/
 src/main/resources/application-local.properties
