--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ src/test/resources/application-test.properties
 src/test/java/nto/demonstrations/*
 build/reports/tests/
 build/test-results/
+logs/*
 
 ### VS Code ###
 .vscode/
