--- a/.github/workflows/deploy-db.yml
+++ b/.github/workflows/deploy-db.yml
@@ -19,7 +19,7 @@ jobs:
             CONTAINER_NAME="nto_db_container"
             DB_NAME=${{ secrets.DB_NAME }}
             DB_USER="postgres"
-            DB_PASS=${{ secrets.DB_PASS }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
             HOST_PORT="5400"
             VOLUME_NAME="nto_pg_data"
 
@@ -39,7 +39,7 @@ jobs:
               -p $HOST_PORT:5432 \
               -e POSTGRES_DB=$DB_NAME \
               -e POSTGRES_USER=$DB_USER \
-              -e POSTGRES_PASSWORD=$DB_PASS \
+              -e POSTGRES_PASSWORD=$DB_PASSWORD \
               -v $VOLUME_NAME:/var/lib/postgresql/data \
               --restart unless-stopped \
               postgres:15-alpine
