--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name formatis.online; # ЗАМЕНИ НА СВОЙ ДОМЕН
+        server_name formatis.online;
 
         # Специальный location для проверки владения доменом от Let's Encrypt
         location /.well-known/acme-challenge/ {
@@ -20,7 +20,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name formatis.online; # ЗАМЕНИ НА СВОЙ ДОМЕН
+        server_name formatis.online; 
 
         # Пути к сертификатам (они появятся после работы Certbot)
         ssl_certificate /etc/letsencrypt/live/formatis.online/fullchain.pem;
