--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ logging.file.name=logs/nto-app.log
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=7
 logging.logback.rollingpolicy.total-size-cap=512MB
+logging.level.root=trace
